# echobet-pro

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  rust-toolchain.toml  tsconfig.json
.cargo/: config.toml
app/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
app/src/: App.tsx  index.css  main.tsx
app/src/components/layout/: Navbar.tsx
app/src/components/market/: MarketCard.tsx
app/src/hooks/: useBetStorage.ts  useProgram.ts
app/src/idl/: echobet_pro.json
app/src/pages/: CreateMarket.tsx  Dashboard.tsx  MarketDetail.tsx  Markets.tsx
app/src/utils/: commitment.ts  format.ts  pda.ts
programs/echobet_pro/: Cargo.toml
programs/echobet_pro/src/: lib.rs
tests/: echobet_pro.ts
