[package]
name = "echobet_pro"
version = "0.1.0"
description = "Privacy-preserving prediction market on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "echobet_pro"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
sha2 = "0.10"
